# introlix

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local  Dockerfile.local.dockerignore  README.md  app.py  docker-compose.yml  introlix.db  pyproject.toml  start.sh  test.py
.github/workflows/: deploy-hf-spaces.yml  release-docker.yml
introlix/: config.py  database.py  llm_config.py  models.py  schemas.py  state.py
introlix/agents/: base_agent.py  baseclass.py  chat_agent.py  context_agent.py  edit_agent.py  explorer_agent.py  planner_agent.py
introlix/prompts/: __init__.py  chat_agent.md  context_agent.md  edit_agent.md
introlix/routes/: auth.py  chat.py  research_desk.py  services.py
introlix/services/: LLMState.py  download_llama_cpp_build.py  download_llm.py
introlix/tools/: tool_def.py  web_crawler.py  web_search.py
introlix/utils/: auth.py  title_gen.py
web/: package.json  pnpm-lock.yaml
web/src/: middleware.ts
web/src/app/: action.ts  globals.css  layout.tsx  middleware.ts
web/src/app/actions/: auth.ts
web/src/app/help/: page.tsx
web/src/app/hub/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/workspaces/: page.tsx
web/src/app/workspaces/[workspaceid]/: page.tsx
web/src/app/workspaces/[workspaceid]/chat/: page.tsx
web/src/app/workspaces/[workspaceid]/chat/[chatid]/: page.tsx
web/src/app/workspaces/[workspaceid]/desk/: page.tsx
web/src/app/workspaces/[workspaceid]/desk/[deskid]/: page.tsx
web/src/components/: agent-status.tsx  app-sidebar.tsx  chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat-page.tsx  context-agent-panel.tsx  context-input.tsx  desk-ai-pannel.tsx  desk-plans-card.tsx  login-form.tsx  new-workspace-dialog.tsx  signup-form.tsx
web/src/components/ui/: textarea.tsx
web/src/hooks/: use-auth.ts  use-chat.ts  use-services.ts  use-streaming.ts
web/src/lib/: api.ts  types.ts  utils.ts
