[project]
name = "introlix-research"
description = "An AI-powered research platform that transforms how you conduct research"
authors = [{ name = "Satyam Mishra", email = "satyam@introlix.ai" }]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }
keywords = [
    "ai",
    "research",
    "llm",
    "agent",
    "search",
    "knowledge-management",
    "fastapi",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: FastAPI",
]

dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "llama-cpp-python>=0.3.23",
    "feedparser>=6.0.12",
    "beautifulsoup4>=4.14.3",
    "platformdirs>=4.9.6",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "torch>=2.12.0",
    "aiohttp>=3.13.5",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
    "pdfplumber>=0.11.9",
    "tiktoken>=0.12.0",
    "pinecone>=9.0.0",
    "motor>=3.7.1",
    "sentence-transformers>=5.5.0",
    "playwright>=1.59.0",
    "ddgs>=9.14.4",
    "google-genai>=2.4.0"
]
[tool.setuptools.packages.find]
include = ["introlix*"]
exclude = ["web*"]

[project.urls]
Homepage = "https://github.com/introlix/introlix-app"
Repository = "https://github.com/introlix/introlix-app"
Documentation = "https://github.com/introlix/introlix-app/tree/main/docs"
"Bug Tracker" = "https://github.com/introlix/introlix-app/issues"